{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 61,
  "lineage": "9f55c257-b5b1-de50-dfab-1823b0e48427",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "tf-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/backendAddressPools/backendPool",
                "ip_addresses": [],
                "name": "backendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/backendHttpSettingsCollection/httpSettings",
                "name": "httpSettings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/frontendIPConfigurations/frontendIP",
                "name": "frontendIP",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/publicIPAddresses/appgw-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/frontendPorts/frontendPort",
                "name": "frontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-appgw"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/frontendIPConfigurations/frontendIP",
                "frontend_ip_configuration_name": "frontendIP",
                "frontend_port_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/frontendPorts/frontendPort",
                "frontend_port_name": "frontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/httpListeners/listener",
                "name": "listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1",
            "identity": [],
            "location": "westeurope",
            "name": "appgw-1",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/backendAddressPools/backendPool",
                "backend_address_pool_name": "backendPool",
                "backend_http_settings_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/backendHttpSettingsCollection/httpSettings",
                "backend_http_settings_name": "httpSettings",
                "http_listener_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/httpListeners/listener",
                "http_listener_name": "listener",
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/applicationGateways/appgw-1/requestRoutingRules/rule1",
                "name": "rule1",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "r-group-1",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.tf-ip-appgw",
            "azurerm_resource_group.tf-rg-1",
            "azurerm_subnet.tf-sn-appgw",
            "azurerm_virtual_network.tf-vn-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkInterfaces/azure-nic-1",
            "internal_domain_name_suffix": "pqq2q45zzhze3f1tvgnmsovtja.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/publicIPAddresses/azure-pip-1",
                "subnet_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-85-E1-01",
            "name": "azure-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "r-group-1",
            "virtual_machine_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Compute/virtualMachines/azure-linux-vm-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.tf-pip",
            "azurerm_resource_group.tf-rg-1",
            "azurerm_subnet.tf-sn-1",
            "azurerm_virtual_network.tf-vn-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkInterfaces/azure-nic-2",
            "internal_domain_name_suffix": "pqq2q45zzhze3f1tvgnmsovtja.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/publicIPAddresses/azure-pip-2",
                "subnet_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "7C-1E-52-29-35-3F",
            "name": "azure-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "r-group-1",
            "virtual_machine_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Compute/virtualMachines/azure-linux-vm-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.tf-pip",
            "azurerm_resource_group.tf-rg-1",
            "azurerm_subnet.tf-sn-1",
            "azurerm_virtual_network.tf-vn-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkInterfaces/azure-nic-1|/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkSecurityGroups/azure-nsg-ssh",
            "network_interface_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkInterfaces/azure-nic-1",
            "network_security_group_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkSecurityGroups/azure-nsg-ssh"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.tf-nic",
            "azurerm_network_security_group.tf-nsg",
            "azurerm_public_ip.tf-pip",
            "azurerm_resource_group.tf-rg-1",
            "azurerm_subnet.tf-sn-1",
            "azurerm_virtual_network.tf-vn-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkInterfaces/azure-nic-2|/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkSecurityGroups/azure-nsg-ssh",
            "network_interface_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkInterfaces/azure-nic-2",
            "network_security_group_id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkSecurityGroups/azure-nsg-ssh"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.tf-nic",
            "azurerm_network_security_group.tf-nsg",
            "azurerm_public_ip.tf-pip",
            "azurerm_resource_group.tf-rg-1",
            "azurerm_subnet.tf-sn-1",
            "azurerm_virtual_network.tf-vn-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkSecurityGroups/azure-nsg-ssh",
            "location": "westeurope",
            "name": "azure-nsg-ssh",
            "resource_group_name": "r-group-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/networkSecurityGroups/azure-nsg-ssh/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "azure-nsg-ssh",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "r-group-1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.tf-nsg",
            "azurerm_resource_group.tf-rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-ip-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/publicIPAddresses/appgw-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.201.64.4",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "appgw-public-ip",
            "resource_group_name": "r-group-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/publicIPAddresses/azure-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.136.102.93",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "azure-pip-1",
            "resource_group_name": "r-group-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/publicIPAddresses/azure-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.17.188",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "azure-pip-2",
            "resource_group_name": "r-group-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-1",
            "name": "azure-sn-1",
            "resource_group_name": "r-group-1",
            "virtual_network_name": "azure-vn-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1",
            "azurerm_virtual_network.tf-vn-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sn-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-appgw",
            "name": "azure-sn-appgw",
            "resource_group_name": "r-group-1",
            "virtual_network_name": "azure-vn-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1",
            "azurerm_virtual_network.tf-vn-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-vn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7bc8217c-c9f9-4ef2-9773-a99ac93ab348",
            "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1",
            "location": "westeurope",
            "name": "azure-vn-1",
            "resource_group_name": "r-group-1",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-1",
                "name": "azure-sn-1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/0efc44f5-967e-4b88-942d-65683788bb59/resourceGroups/r-group-1/providers/Microsoft.Network/virtualNetworks/azure-vn-1/subnets/azure-sn-appgw",
                "name": "azure-sn-appgw"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tf-rg-1"
          ]
        }
      ]
    }
  ]
}